syntax = "proto3";

package com.city.explorer.geo.db.adapter.cities.details;

option java_multiple_files = true;
option java_package = "com.city.explorer.geo.db.adapter.cities.details";
option java_outer_classname = "CityDetailsProto";

service CityDetailsService {
  rpc GetCityDetails (CityDetailsRequest) returns (CityDetails) {
  }
}

message CityDetailsRequest {
  string id = 1;
}

message CityDetails {
  string id = 1;
  string country = 2;
  string country_code = 3;
  string region = 4;
  float latitude = 5;
  float longitude = 6;
  int32 elevationMeters = 7;
  int32 population = 8;
}
